--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                net.weesli.windowsschoolapplication/net.weesli.windowsschoolapplication.HelloApplication
+                                net.weesli.windowsschoolapplication/net.weesli.windowsschoolapplication.MainApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
